--- a/static/css/main.css
+++ b/static/css/main.css
@@ -138,6 +138,7 @@ z-index: 80;
     padding-bottom: 40px; 
 }
 
+#detail_wrap #detail_box #detail_img, 
 #detail_wrap #detail_box #detail_work, 
 #detail_wrap #detail_box #detail_ref {
     width: 100%;
@@ -146,13 +147,16 @@ z-index: 80;
     margin: 0 auto;
     padding-bottom: 20px;
 }
+#detail_wrap #detail_box #detail_img, 
 #detail_wrap #detail_box #detail_work, 
 #detail_wrap #detail_box #detail_ref, 
+#detail_wrap #detail_box #detail_img li.img_list, 
 #detail_wrap #detail_box #detail_work li.work_list, 
 #detail_wrap #detail_box #detail_ref li.ref_list {
     font-size: 0.9rem;
     /* font-weight: 600; */
 }
+#detail_wrap #detail_box #detail_work p.img_title, 
 #detail_wrap #detail_box #detail_work p.work_title, 
 #detail_wrap #detail_box #detail_ref p.ref_title {
     font-size: 1.2rem;
