--- a/static/css/main.css
+++ b/static/css/main.css
@@ -157,9 +157,9 @@ z-index: 80;
     font-size: 0.9rem;
     /* font-weight: 600; */
 }
-#detail_wrap #detail_box #detail_img p.img_title, 
-#detail_wrap #detail_box #detail_work p.work_title, 
-#detail_wrap #detail_box #detail_ref p.ref_title {
+#detail_wrap #detail_box #detail_img .img_title, 
+#detail_wrap #detail_box #detail_work .work_title, 
+#detail_wrap #detail_box #detail_ref .ref_title {
     font-size: 2rem;
     font-weight: 600;
 }
