--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -81,8 +81,7 @@
 section .view_wrap {
     width: 100%;
     max-width: 596px;
-    margin: 0 auto;
-    margin-top: 80px;
+    margin: 80px auto;
 }
 
 section .view_wrap .contEditor center>h3 {
