--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -95,7 +95,7 @@ section .userList_wrap {
     margin-top: 40px;
 }
 
-#create_img_wrap #attached_img_table img {
+#create_img_wrap #attached_img_table tbody tr td img {
     width: 100%;
     max-width: 140px;
     margin: 0 auto;
