--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -96,9 +96,8 @@ section .userList_wrap {
 }
 
 #create_img_wrap #create_image .attach_frame {
-    width: 100%;
-    max-width: 700px;
-    margin: 0 auto;
+    width: 596px;
+    height: 240px;
 }
 
 /****footer****/
