--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -96,13 +96,22 @@ section .userList_wrap {
 }
 
 #create_image_wrap #img_attach {
-    width: 100px;
+    width: 150px;
     height: 30px;
+    margin-top: 30px;
+    margin-bottom: 10px;
     background-color: rgb(200, 200, 200);
     text-align: center;
     padding-top: 4px;
     box-shadow: 3px 4px 8px 0 rgba(0, 0, 0, 0.3);
     cursor: pointer;
+
+}
+
+#create_image_wrap #img_attach :hover {
+    width: 155px;
+    height: 35px;
+    padding-top: 6px;
 
 }
 
