--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -105,13 +105,14 @@ section .userList_wrap {
     padding-top: 4px;
     box-shadow: 3px 4px 8px 0 rgba(0, 0, 0, 0.3);
     cursor: pointer;
-
+    
 }
 
 #create_image_wrap #img_attach:hover {
     width: 155px;
     height: 35px;
     padding-top: 6px;
+    margin-bottom: 5px;
 
 }
 
