--- a/static/css/main.css
+++ b/static/css/main.css
@@ -176,7 +176,13 @@ z-index: 80;
 #detail_wrap #detail_box #detail_ref ul li img {
     width: 100%;
     max-width: 596px;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
 }
+#detail_wrap #detail_box #detail_img ul li .attached_img_tag{
+    display: grid;
+} 
 
 
 
