--- a/static/css/main.css
+++ b/static/css/main.css
@@ -181,6 +181,11 @@ z-index: 80;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
 }
 #detail_wrap #detail_box #detail_img ul li .attached_img_tag{
+    /* display: grid; */
+    font-family: "또박또박";
+    font-size: 1.7rem;
+} 
+#detail_wrap #detail_box #detail_img ul li .attached_img_tag .attached_img_title {
     display: grid;
 } 
 
