--- a/static/css/main.css
+++ b/static/css/main.css
@@ -187,6 +187,7 @@ z-index: 80;
 } 
 #detail_wrap #detail_box #detail_img ul li .attached_img_tag .attached_img_title {
     font-weight: 900;
+    margin: 0 10px;
 } 
 
 
