--- a/static/css/header.css
+++ b/static/css/header.css
@@ -154,7 +154,7 @@
 #menu_wrap {
     width: 100%;
     /* height: 100%; */
-    height: calc(100vh - 70px);
+    min-height: calc(100vh - 70px);
     z-index: 99;
     background-color: rgb(240, 240, 240);
     position: absolute;
