--- a/static/css/header.css
+++ b/static/css/header.css
@@ -153,7 +153,7 @@
 
 #menu_wrap {
     width: 100%;
-    /* height: 100%; */
+    height: 100%;
     min-height: calc(100vh - 70px);
     z-index: 99;
     background-color: rgb(240, 240, 240);
