--- a/static/css/header.css
+++ b/static/css/header.css
@@ -64,8 +64,9 @@
 }
 
 #header_wrap #header_box #header_box_area #header_title {
+    width: 100%;
+    max-width: 150px;
     margin: 0 auto;
-    /* width: 476px; */
     /* padding-top: 7px; */
     font-size: 1.2rem;
     cursor: pointer;
