show attached ref

--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -100,7 +100,8 @@ section .userList_wrap {
     margin: 40px auto;
 }
 #create_image_wrap #img_attach,
-#create_work_wrap #work_attach {
+#create_work_wrap #work_attach,
+#create_ref_wrap #ref_attach {
     width: 150px;
     height: 30px;
     margin-top: 30px;
@@ -114,7 +115,8 @@ section .userList_wrap {
 }
 
 #create_image_wrap #img_attach:hover,
-#create_work_wrap #work_attach:hover {
+#create_work_wrap #work_attach:hover,
+#create_ref_wrap #ref_attach:hover {
     width: 155px;
     height: 35px;
     padding-top: 6px;
