--- a/static/css/header.css
+++ b/static/css/header.css
@@ -10,6 +10,8 @@
     height: 80px;
     display: none;
     z-index: 100;
+    position: fixed;
+    top: 0;
     /* position: -webkit-sticky;
     position: sticky;
     top: 0; */
