--- a/static/css/header.css
+++ b/static/css/header.css
@@ -157,12 +157,14 @@
 #menu_wrap {
     width: 100%;
     height: 100%;
-    min-height: calc(100vh - 140px);
+    min-height: calc(100vh - 70px);
     z-index: 99;
     background-color: rgb(240, 240, 240);
     position: absolute;
-    top: 70px;
+    /* top: 70px; */
+    top: 0;
     left: 0;
+    margin-top: 70px;
     display: none;
 }
 
