--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -82,6 +82,14 @@
     margin-top: 140px;
 }
 
+#create_wrap {
+    position: absolute;
+    width: 100%;
+    /* max-width: 700px; */
+    margin: 0 auto;
+    padding-top: 70px;
+}
+
 section .view_wrap {
     width: 100%;
     max-width: 596px;
