--- a/static/css/main.css
+++ b/static/css/main.css
@@ -73,7 +73,7 @@
 #detail_wrap {
     width: 100%;
     height: calc(100vh - 70px);
-    position: absolute;
+    /* position: absolute; */
     top: 70px;
     background-color: rgb(240, 240, 240);
     /* background-color: #777; */
