--- a/static/css/main.css
+++ b/static/css/main.css
@@ -246,7 +246,7 @@
 /****footer****/
 
 #footer_wrap {
-    position: fixed;
+    /* position: fixed; */
     bottom: 0;
     text-align: center;
     width: 100%;
