--- a/static/css/header.css
+++ b/static/css/header.css
@@ -160,7 +160,7 @@
     min-height: calc(100vh - 70px);
     z-index: 99;
     background-color: rgb(240, 240, 240);
-    position: absolute;
+    /* position: absolute; */
     /* top: 70px; */
     top: 0;
     left: 0;
