--- a/static/css/header.css
+++ b/static/css/header.css
@@ -171,9 +171,10 @@
 #menu_wrap #menu_box {
     width: 100%;
     max-width: 768px;
+    min-height: calc(100vh - 100px);
     margin: 0 auto;
     position: relative;
-    top: 40px;
+    top: 140px;
     padding: 15px;
     font-size: 1.8rem;
 }
