--- a/static/css/main.css
+++ b/static/css/main.css
@@ -210,9 +210,11 @@
 
 #detail_func_wrap #back_btn {
     text-align: right;
+    margin-right: 20px;
 }
 #detail_func_wrap #share_btn {
     text-align: left;
+    margin-left: 20px;
 }
 
 
