--- a/static/css/header.css
+++ b/static/css/header.css
@@ -164,7 +164,7 @@
     /* top: 70px; */
     top: 0;
     left: 0;
-    margin-top: 70px;
+    margin-top: 140px;
     display: none;
 }
 
@@ -174,7 +174,7 @@
     min-height: calc(100vh - 100px);
     margin: 0 auto;
     /* position: relative; */
-    top: 140px;
+    /* top: 140px; */
     padding: 15px;
     font-size: 1.8rem;
 }
