--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -154,6 +154,7 @@ section #userList_wrap .user_table {
     margin: 0 auto;
     width: 100%;
     max-width: 300px;
+    text-align: center;
 }
 #admin_detail_func_wrap #back_btn img,
 #admin_detail_func_wrap #modify_btn img,
