--- a/static/css/main.css
+++ b/static/css/main.css
@@ -223,8 +223,8 @@
 } */
 
 
-#detail_func_wrap #back_btn img,
-#detail_func_wrap #share_btn img {
+#detail_func_wrap .back_btn img,
+#detail_func_wrap .share_btn img {
     width: 60px;
     padding: 10px;
     cursor: pointer;
