--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -156,7 +156,7 @@ section #userList_wrap .user_table {
     max-width: 300px;
     text-align: center;
 }
-#admin_detail_func_wrap #back_btn img,
+#admin_detail_func_wrap .back_btn img,
 #admin_detail_func_wrap .modify_btn img,
 #admin_detail_func_wrap .delete_btn img {
     width: 60px;
