--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -116,8 +116,11 @@ section #userList_wrap .user_table {
 }
 
 #create_image_wrap,
-#create_work_wrap {
+#create_work_wrap,
+#create_ref_wrap {
     margin: 40px auto;
+    border: 10px solid rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
 }
 
 #create_image_wrap #img_attach,
@@ -127,7 +130,8 @@ section #userList_wrap .user_table {
     height: 30px;
     margin-top: 30px;
     margin-bottom: 10px;
-    background-color: rgb(200, 200, 200);
+    margin-left: 10px;
+    background-color: rgb(95, 160, 104);
     text-align: center;
     padding-top: 4px;
     box-shadow: 3px 4px 8px 0 rgba(0, 0, 0, 0.3);
@@ -141,6 +145,16 @@ section #userList_wrap .user_table {
     height: 35px;
     padding-top: 6px;
     margin-bottom: 5px;
+}
+
+.attach_box {
+    padding-left: 5px;
+}
+.submit_box {
+    width: 100%;
+    max-width: 596px;
+    margin: 40px auto;
+    text-align: center;
 }
 
 .coordinates {
