--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -150,6 +150,7 @@ section #userList_wrap .user_table {
 .attach_box {
     padding-left: 5px;
 }
+
 .submit_box {
     width: 100%;
     max-width: 596px;
@@ -169,10 +170,11 @@ section #userList_wrap .user_table {
     line-height: 18px;
     border-radius: 3px;
     display: none;
-    }
+}
 
 
 /****detail****/
+
 #admin_detail_func_wrap {
     display: grid;
     /* grid-template-columns: 45% 10% 45%; */
@@ -183,14 +185,15 @@ section #userList_wrap .user_table {
     max-width: 300px;
     text-align: center;
 }
+
 #admin_detail_func_wrap .back_btn img,
 #admin_detail_func_wrap .modify_btn img,
-#admin_detail_func_wrap .delete_btn img {
+#admin_detail_func_wrap .delete_btn img,
+#intro_cont_wrap #intro_cont .delete_btn img {
     width: 60px;
     padding: 10px;
     cursor: pointer;
 }
-
 
 
 /****footer****/
