intro func wrap

--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -175,7 +175,8 @@ section #userList_wrap .user_table {
 
 /****detail****/
 
-#admin_detail_func_wrap {
+#admin_detail_func_wrap,
+#admin_intro_func_wrap {
     display: grid;
     /* grid-template-columns: 45% 10% 45%; */
     /* grid-template-columns: calc((100% - 100px)/2) 100px calc((100% - 100px)/2); */
