--- a/static/css/main.css
+++ b/static/css/main.css
@@ -279,6 +279,11 @@
     display: none;
 }
 
+#map .mapboxgl-popup-content,
+#map .mapboxgl-popup-tip {
+    background: rgba(255, 255, 255, 0.6);
+}
+
 
 /****footer****/
 
