detail layout css

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -57,8 +57,9 @@
 }
 
 .ddobag {
-    font-family: "또박또박", sans-serif;
+    font-family: "또박또박", "경기천년바탕", sans-serif;
 }
+
 
 body {
     width: 100%;
