--- a/static/css/main.css
+++ b/static/css/main.css
@@ -118,7 +118,7 @@
 #detail_wrap #detail_box #detail_title h3 {
     font-size: 2rem;
 }
-#detail_wrap #detail_box #detail_title h4 {
+#detail_wrap #detail_box #detail_sub_title h4 {
     font-size: 1.8rem;
 }
 
