map info see more

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -328,6 +328,10 @@
     padding-top: 10px;
 }
 
+#map .mapboxgl-popup-content p.right_p {
+    text-align: right;
+}
+
 #map .mapboxgl-popup-tip {
     border-top-color: rgba(255, 255, 255, 0.6);
 }
