--- a/static/css/main.css
+++ b/static/css/main.css
@@ -155,6 +155,7 @@
     background-color: rgba(255, 200, 100, 0.05);
     border-radius: 10px;
     padding: 0 25px;
+    padding-bottom: 25px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     font-size: 1.4rem;
     white-space: pre-line;
