--- a/static/css/main.css
+++ b/static/css/main.css
@@ -230,11 +230,16 @@
     /* display: grid; */
     font-family: "또박또박";
     font-size: 1.7rem;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
+
+#detail_wrap #detail_box #detail_img ul li .attached_img_tag,
+#detail_wrap #detail_box #detail_work ul li .attached_work_tag {
+    padding: 25px;
+}
+
 #detail_wrap #detail_box #detail_img ul li,
-#detail_wrap #detail_box #detail_work ul li,
-#detail_wrap #detail_box #detail_ref ul li {
+#detail_wrap #detail_box #detail_work ul li {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
     border-radius: 5px;
 }
