--- a/static/css/main.css
+++ b/static/css/main.css
@@ -219,7 +219,7 @@
     width: 100%;
     max-width: 596px;
     /* margin-top: 15px; */
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
     /* box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.3); */
     border-radius: 5px 5px 0 0;
 }
@@ -235,7 +235,7 @@
 
 #detail_wrap #detail_box #detail_img ul li .attached_img_tag,
 #detail_wrap #detail_box #detail_work ul li .attached_work_tag {
-    padding: 25px;
+    padding: 10px 25px 25px 25px;
 }
 
 #detail_wrap #detail_box #detail_img ul li,
