--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -184,7 +184,8 @@ section #userList_wrap .user_table {
 /****detail****/
 
 #admin_detail_func_wrap,
-#admin_intro_func_wrap {
+#admin_intro_func_wrap,
+#attached_func_wrap {
     display: grid;
     /* grid-template-columns: 45% 10% 45%; */
     /* grid-template-columns: calc((100% - 100px)/2) 100px calc((100% - 100px)/2); */
@@ -199,16 +200,22 @@ section #userList_wrap .user_table {
 #admin_detail_func_wrap .modify_btn img,
 #admin_detail_func_wrap .delete_btn img,
 #intro_cont_wrap #intro_cont .delete_btn img,
-#intro_cont_wrap #intro_cont .modify_btn img {
+#intro_cont_wrap #intro_cont .modify_btn img,
+#attached_func_wrap .delete_btn img,
+#attached_func_wrap .modify_btn img {
     width: 60px;
     padding: 10px;
     cursor: pointer;
 }
 
 #intro_cont_wrap #intro_cont .delete_btn,
-#intro_cont_wrap #intro_cont .modify_btn {
+#intro_cont_wrap #intro_cont .modify_btn,
+#attached_func_wrap .delete_btn,
+#attached_func_wrap .modify_btn {
     width: 80px;
 }
+
+
 
 
 /****footer****/
