detail img func btn

--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -200,21 +200,27 @@ section #userList_wrap .user_table {
 #admin_detail_func_wrap .modify_btn img,
 #admin_detail_func_wrap .delete_btn img,
 #intro_cont_wrap #intro_cont .delete_btn img,
-#intro_cont_wrap #intro_cont .modify_btn img,
+#intro_cont_wrap #intro_cont .modify_btn img {
+    width: 60px;
+    padding: 10px;
+    cursor: pointer;
+}
 #attached_func_wrap .delete_btn img,
 #attached_func_wrap .modify_btn img {
-    width: 60px;
+    width: 40px;
     padding: 10px;
     cursor: pointer;
 }
 
 #intro_cont_wrap #intro_cont .delete_btn,
-#intro_cont_wrap #intro_cont .modify_btn,
-#attached_func_wrap .delete_btn,
-#attached_func_wrap .modify_btn {
+#intro_cont_wrap #intro_cont .modify_btn {
     width: 80px;
 }
 
+#attached_func_wrap .delete_btn,
+#attached_func_wrap .modify_btn {
+    width: 60px;
+}
 
 
 
