--- a/static/css/admin_style.css
+++ b/static/css/admin_style.css
@@ -96,8 +96,6 @@
     min-height: 150px;
 }
 
-
-
 section .view_wrap {
     width: 100%;
     max-width: 596px;
@@ -205,7 +203,9 @@ section #userList_wrap .user_table {
     padding: 10px;
     cursor: pointer;
 }
+
 #attached_func_wrap .delete_btn img,
+#attached_func_wrap .top_btn img,
 #attached_func_wrap .modify_btn img {
     width: 40px;
     padding: 10px;
@@ -218,11 +218,11 @@ section #userList_wrap .user_table {
 }
 
 #attached_func_wrap .delete_btn,
+#attached_func_wrap .top_btn,
 #attached_func_wrap .modify_btn {
     width: 60px;
     margin: 0 auto;
 }
-
 
 
 /****footer****/
