marker info font

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -52,14 +52,13 @@
     font-family: "또박또박", serif;
 }
 
-.gg-title {
-    font-family: "또박또박", sans-serif;
+.gg-batang {
+    font-family: "경기천년바탕", sans-serif;
 }
 
 .ddobag {
     font-family: "또박또박", "경기천년바탕", sans-serif;
 }
-
 
 body {
     width: 100%;
