--- a/static/css/main.css
+++ b/static/css/main.css
@@ -172,6 +172,7 @@
     font-family: "경기천년바탕";
     font-size: 1rem;
     line-height: 1.7rem;
+    font-weight: 600;
 }
 
 #detail_wrap #detail_box #detail_cont {
