--- a/static/css/main.css
+++ b/static/css/main.css
@@ -186,7 +186,7 @@
     line-height: 1.9rem;
     color: rgba(0, 0, 0, 0.75);
     padding-bottom: 40px;
-    font-family: "또박또박";
+    /* font-family: "또박또박"; */
     text-indent: 1rem;
 }
 
