--- a/static/css/header.css
+++ b/static/css/header.css
@@ -145,7 +145,8 @@
     position: absolute;
     top: 0;
     color: rgba(0, 0, 0, 0.5);
-    font-size: 1.5rem;
+    /* font-size: 1.5rem; */
+    font-size: 1rem;
 }
 
 
