--- a/static/css/main.css
+++ b/static/css/main.css
@@ -374,7 +374,8 @@
 }
 
 .marker {
-    filter: grayscale(1) drop-shadow(0px 0px 0px red) contrast(1.0) brightness(1.2);
+    /* filter: grayscale(1) drop-shadow(0px 0px 0px red) contrast(1.0) brightness(1.2); */
+    filter: grayscale(1) drop-shadow(0px 0px 0px rgb(160, 27, 9)) contrast(1.0) brightness(1.2);
 }
 
 
