--- a/static/css/header.css
+++ b/static/css/header.css
@@ -8,7 +8,7 @@
 #header_wrap {
     width: 100%;
     height: 80px;
-    display: none;
+    /* display: none; */
     z-index: 100;
     position: fixed;
     top: 0;
@@ -236,7 +236,6 @@
     max-width: 90% !important;
     /* max-width: calc(100% - 1rem) !important; */
 }
-
 
 
 /*menu_place*/
