--- a/static/css/main.css
+++ b/static/css/main.css
@@ -375,7 +375,8 @@
 
 .marker {
     /* filter: grayscale(1) drop-shadow(0px 0px 0px red) contrast(1.0) brightness(1.2); */
-    filter: grayscale(1) drop-shadow(0px 0px 0px rgb(255, 30, 0)) contrast(1.1) brightness(1.0);
+    /* filter: grayscale(1) drop-shadow(0px 0px 0px rgb(255, 30, 0)) contrast(1.1) brightness(1.0); */
+    filter: grayscale(0.3) opacity(0.8) drop-shadow(0px 0px 0px rgb(255, 30, 0)) contrast(1.1) brightness(1.0);
 }
 
 
