--- a/static/css/main.css
+++ b/static/css/main.css
@@ -298,7 +298,8 @@
 /****map****/
 
 #map_wrap {
-    width: 100%;
+    /* width: 100%; */
+    width: 100vw;
     height: calc(100vh - 70px);
     position: absolute;
     top: 70px;
