detail wrap display init

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -80,7 +80,7 @@
     /* background-color: #777; */
     left: 0;
     /* z-index: -5; */
-    display: none;
+    /* display: none; */
     z-index: 80;
 }
 
