--- a/static/css/all.css
+++ b/static/css/all.css
@@ -16,7 +16,7 @@
 
 @font-face {
     font-family: "경기천년바탕";
-    src: url('../../fonts/Batang_Regular.otf'), url('../../fonts/Batang_Regular.eot'), url('../../fonts/Batang_Regular.woff'), url('../../fonts/경기천년바탕_Regular.ttf');
+    src: url('../../fonts/Batang_Regular.woff'), url('../../fonts/Batang_Regular.otf'), url('../../fonts/Batang_Regular.eot'), url('../../fonts/경기천년바탕_Regular.ttf');
 }
 
 @font-face {
@@ -38,6 +38,7 @@
     src: url('../../fonts/NanumDdoBagDdoBag.woff'), url('../../fonts/NanumDdoBagDdoBag.eot'), url('../../fonts/NanumDdoBagDdoBag.ttf');
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap');
 
 /* .gg-bold {
     font-family: "경기천년볼드", serif;
@@ -56,7 +57,8 @@
 }
 
 .gg-batang {
-    font-family: "GyeonggiBatang", "경기천년바탕", sans-serif;
+    /* font-family: "GyeonggiBatang", "경기천년바탕", sans-serif; */
+    font-family: 'Yeon Sung', cursive;
 }
 
 .ddobag {
@@ -67,7 +69,8 @@ body {
     width: 100%;
     position: relative;
     font-size: 1.5rem;
-    font-family: '또박또박', '경기천년바탕', 'Noto Serif SC', 'Noto Serif TC', sans-serif;
+    /* font-family: '또박또박', '경기천년바탕', 'Noto Serif SC', 'Noto Serif TC', sans-serif; */
+    font-family: 'Yeon Sung', cursive;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -moz-user-select: none;
