--- a/static/css/all.css
+++ b/static/css/all.css
@@ -62,7 +62,8 @@
 }
 
 .ddobag {
-    font-family: "또박또박", "경기천년바탕", sans-serif;
+    /* font-family: "또박또박", "경기천년바탕", sans-serif; */
+    font-family: 'Yeon Sung', sans-serif;
 }
 
 
